--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,7 @@
 @media (max-width:700px) {
     #main{
         overflow-x: hidden;
+        user-select: none;
     }
 /* ------------------------------------------------------------------------------------------------------------------ */
     /* Page 1 */
