--- a/style.css
+++ b/style.css
@@ -634,6 +634,7 @@ button,i{
     width: 400px;
     height: 350px;
     background-color: white;
+    text-align: center;
     position: absolute;
     bottom: 20%;
     right: 20%;
