--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,4 @@
+
 @media (max-width:700px) {
     #main{
         overflow-x: hidden;
@@ -27,7 +28,8 @@
         justify-content: flex-start;
     }
     #page1 #data #left h1{
-        font-size: 14vw;        
+        font-size: 14vw; 
+        line-height: 1;       
     }
     
     #page1 #data #left p{
