--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ button:hover{
 #page1 #data #left h1{
     font-family: yank;
     font-size: 6vw;
-    line-height: 8vw;
+    line-height:1;
 }
 #page1 #data #left h1 span{
     color:rgb(160, 20, 160);
