--- a/style.css
+++ b/style.css
@@ -32,6 +32,24 @@ button:hover{
     /* min-height: max-content; */
     /* background-color: tomato; */
 }
+.cursor{
+    position: relative;
+    width: 50px;
+    height: 50px;
+}
+.cursor .cir{
+    width: 100%;
+    height: 100%;
+    /* background: linear-gradient(#00d0ff,#ff005e); */
+    border: 1px solid black;
+    /* mix-blend-mode: difference; */
+    border-radius: 50%;
+    position: absolute;
+    top: -50%;
+    left: -50%;
+}
+
+
 /* ---------------------------------------------------------------------------------------- */
 /* Page 1 */
 #page1{
