--- a/style.css
+++ b/style.css
@@ -32,10 +32,14 @@ button:hover{
     /* min-height: max-content; */
     /* background-color: tomato; */
 }
+body#box{
+    position: fixed;
+}
 .cursor{
-    position: relative;
+    position: fixed;
     width: 50px;
     height: 50px;
+    z-index: 999;
 }
 .cursor .cir{
     width: 100%;
