--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     font-family: gilroy;
     src: url(./fonts/Gilroy-Regular.otf);
 }
+@font-face {
+    font-family: mazius;
+    src: url(./fonts/Mazius-Extraitalic.121a71a7.otf);
+}
 
 /* CSS Boiler plate */
 *{
@@ -18,6 +22,10 @@
 html,body{
     width: 100%;
     height: 100%;
+    /* background-color: #353535; */
+    background-image: url(./images/background.jpg);
+    background-size: cover;
+    /* filter: brightness(70%); */
 }
 button,i{
     cursor: pointer;
@@ -39,9 +47,13 @@ button:hover{
 #page1{
     width: 100%;
     height: 160vh;
-    background-color:white;
+    /* background-color:#2a2a2a89; */
+    background-image: url(./images/background.jpg);
+    background-size: cover;
+    filter: brightness(70%);
     padding: 0 50px;
 }
+
 #page1 #nav{
     width: 100%;
     height: 10vh;
@@ -74,7 +86,7 @@ button:hover{
     display: flex;
 }
 #page1 #data #left{
-    width: 50%;
+    width: 55%;
     height: 100%;
     /* background-color: pink; */
     padding: 70px 0 0 50px;
@@ -82,18 +94,20 @@ button:hover{
     flex-direction: column;
     gap: 50px;
     align-items: flex-start;
+    color: white;
+    opacity: .8;
 }
 #page1 #data #left h1{
-    font-family: yank;
-    font-size: 6vw;
+    font-family: gilroy;
+    font-size: 3vw;
     line-height:1;
 }
-#page1 #data #left h1 span{
+/* #page1 #data #left h1 span{
     color:rgb(160, 20, 160);
-}
-#page1 #data #left h1 span{
+} */
+/* #page1 #data #left h1 span{
     text-shadow: -7px 7px 10px rgb(144, 0, 255);
-}
+} */
 #page1 #data #left p{
     font-family: gilroy;
     font-size: 1.3vw;
@@ -102,17 +116,17 @@ button:hover{
     padding: 20px 0;
 }
 #page1 #data #left button{
-    padding: 15px 50px;
+    padding: 20px 40px;
     font-size: 1.3vw;
     text-transform: uppercase;
-    color: white;
-    background:linear-gradient(to right,#561DAA,#DA069D);
+    color: black;
+    background:linear-gradient(to right,white,gray);
     border: none;
     transition: all 1s ease;
     border-radius: 50px;
 }
 #page1 #data #left button:hover{
-    background:linear-gradient(to right,#DA069D,#561DAA);
+    /* background:linear-gradient(to right,#DA069D,#561DAA); */
     cursor: pointer;
 }
 
@@ -128,7 +142,7 @@ button:hover{
 #page1 #data #right #box{
     width: 600px;
     height: 600px;
-    background:linear-gradient(to right,#561DAA,#DA069D);
+    background:linear-gradient(to right,white,gray);
     border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% ;
 }
 #page1 #data #right #box img{
@@ -146,18 +160,73 @@ button:hover{
 #page1 #bottom .box{
     width: 23%;
     height: 90%;
-    background-color: white;
     overflow: hidden;
+    border-radius: 50px;
+    position: relative;
 }
 #page1 #bottom .box img{
+    border-radius: 50px;
     width: 100%;
     height: 100%;
     object-fit: cover;
     transition: all 0.5s ease;
 }
-#page1 #bottom .box img:hover{
+#page1 #bottom .box:hover img{
     scale: 1.2;
+    /* filter: contrast(50%); */
 }
+#page1 #bottom .box .text{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(84, 83, 83, 0.68);
+    position: absolute;
+    /* top: 0%; */
+    left: 50%;
+    transform: translate(-50%,0);
+    transition: all 5s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    padding-top: 10px;
+    gap: 5px;
+    color: white;
+    font-family: gilroy;
+}
+#page1 #bottom .box .text h1{
+    font-size: 4vw;
+    font-weight: 900;
+    line-height: 1;
+    /* opacity: .8; */
+}
+#page1 #bottom .box .text h3{
+    font-size: 2vw;
+    color: red;
+}
+#page1 #bottom .box .text #btn{
+    width: 100%;
+    height: 15%;
+    /* background-color: tomato; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+#page1 #bottom .box .text #btn button{
+    padding: 8px 10px;
+    font-size: 1.1vw;
+    border-radius: 50px;
+    border: none;
+    background-color: red;
+    color: white;
+    transition: all .5s ease;
+}
+
+#page1 #bottom .box:hover .text{
+    top: 50%;
+}
+
+
 #page1 #swipe{
     display: none;
 }
@@ -167,7 +236,10 @@ button:hover{
 #page2{
     width: 100%;
     height: 100vh;
-    background-color:rgb(228, 224, 224);
+    /* background-color:#353535; */
+    background-image: url(./images/background.jpg);
+    background-size: cover;
+    filter: brightness(50%);
 }
 #page2 .container{
     width: 100%;
@@ -206,13 +278,13 @@ button:hover{
     transform: translateY(-50px);
     box-shadow: 
     inset 0 0 60px whitesmoke,
-    inset 20px 0 80px #f0f,
-    inset -20px 0 80px #0ff,
-    inset 20px 0 300px #f0f,
-    inset -20px 0 300px #0ff,
+    inset 20px 0 80px gray,
+    inset -20px 0 80px #f2f2f2,
+    inset 20px 0 300px gray,
+    inset -20px 0 300px #f2f2f2,
     0 0 50px #fff,
-    -10px 0 80px #f0f,
-    10px 0 80px #0ff;
+    -10px 0 80px gray,
+    10px 0 80px #f2f2f2;
 }
 #page2 .container .card .face.face1 .content{
     width: 100%;
@@ -252,16 +324,14 @@ button:hover{
 #page2 .container .card .face.face2 .content a{
     text-decoration: none;
     font-size: 1.4vw;
-    color: white;
-    outline: 1px solid #333;
+    color: black;
     padding: 15px 30px;
     margin: 10px 0;
     display: inline-block;
     border-radius: 50px;
-    background:linear-gradient(to right,#561DAA,#DA069D) ;
+    background:linear-gradient(to right,gray,white) ;
 }
 #page2 .container .card .face.face2 .content a:hover{
-    color: black;
     box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -274,7 +344,10 @@ button:hover{
 #page3{
     width: 100%;
     height: 160vh;
-    background-color:#272121;
+    /* background-color:#353535; */
+    background-image: url(./images/background.jpg);
+    background-size: cover;
+    filter: brightness(70%);
 }
 #page3 #box1{
     height: 100%;
@@ -285,7 +358,6 @@ button:hover{
 #page3 img{
     width: 100%;
     height: 60vh;
-    /* object-fit: cover; */
 }
 #page3 #box3{
     display: none;
@@ -306,9 +378,11 @@ button:hover{
     padding: 20px;
     color: white;
     transition: all 1s ease;
+    border-radius: 50px;
+    overflow: hidden;
 }
 #page3 #box1 #box2 .part:hover{
-    scale: 1.15;
+    scale: 1.05;
 }
 #page3 #box1 #box2 .part .heading{
     width: 100%;
@@ -390,15 +464,22 @@ button:hover{
     gap: 20px;
     padding: 10px;
     color: white;
+    opacity: .8;
 }
-#page4 #box #text h2{
+/* #page4 #box #text h2{
     font-size: 2.5vw;
     text-transform: uppercase;
     font-family: yank;
-}
+} */
 #page4 #box #text h1{
     font-size: 7vw;
     text-transform: capitalize;
+    font-family: mazius;
+    /* color: tomato; */
+}
+#page4 #box #text h1 span{
+    display: inline-block;
+    color: springgreen;
 }
 #page4 #box #text button{
     transition: all 1s ease;
@@ -408,8 +489,9 @@ button:hover{
     font-weight: 600;
     border-radius: 50px;
     border: none;
-    background: linear-gradient(to right,#561DAA,#DA069D);
-    color: white;
+    background: linear-gradient(to right,white,gray);
+    color: black;
+    opacity: .8;
     
 }
 
@@ -420,7 +502,10 @@ button:hover{
 #page5{
     width: 100%;
     height: 160vh;
-    background-color:white;
+    /* background-color:#353535; */
+    background-image: url(./images/background.jpg);
+    background-size: cover;
+    filter: brightness(70%);
 }
 #page5 #top{
     width: 100%;
@@ -433,6 +518,8 @@ button:hover{
 #page5 #top #box{
     width: 60%;
     text-align: center;
+    color: white;
+    opacity: .8;
 }
 #page5 #top h1{
     font-family: yank;
@@ -460,12 +547,20 @@ button:hover{
 #page5 #bottom .box{
     width: 40%;
     height: 35vh;
-    background-color: #0ff;
+    background-color: #f2f2f2;
+    border-radius: 30px;
+    overflow: hidden;
     position: relative;
 }
 #page5 #bottom .box img{
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 1s ease;
+}
+#page5 #bottom .box:hover img{
+    scale: 1.1;
 }
 #page5 #bottom .box .text{
     width: 40%;
@@ -492,6 +587,17 @@ button:hover{
     text-transform: capitalize;
     color: red;
 }
+#page5 #bottom .box .text #btn{
+    width: 100%;
+    /* height: 20%; */
+    /* background-color: springgreen; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 2px 0;
+}
 #page5 #bottom .box .text button{
     transition: all 1s ease;
     padding: 10px 40px;
@@ -512,10 +618,11 @@ button:hover{
 #page6{
     width: 100%;
     height: 100vh;
-    background-color: rgb(68, 66, 66);
-    background-image: url(./images/p7img.jpg);
+    background-color: #353535;
+    background-image: url(./images/p7.jpg);
     background-size: cover;
     background-position: center;
+    filter: brightness(80%);
     display: flex;
     align-items: center;
     padding-left: 50px;
@@ -523,7 +630,9 @@ button:hover{
 #page6 #box{
     width: 35%;
     height: 80vh;
+    border-radius: 50px;
     background-color: white;
+    opacity: .8;
 }
 #page6 #box .swiper {
     width: 100%;
@@ -565,7 +674,7 @@ button:hover{
     flex-direction: column;
     justify-content: center;
     gap: 30px;
-    /* box-shadow: inset 10px 10px 20px #0ff,inset -10px -10px 20px #f0f; */
+    /* box-shadow: inset 10px 10px 20px #f2f2f2,inset -10px -10px 20px gray; */
   }
   #page6 .swiper-slide .box .logopic{
       width: 100px;
@@ -608,15 +717,15 @@ button:hover{
 #page7{
     width: 100%;
     height: 100vh;
-    background-color:gainsboro;
+    background-color: #353535;
     /* display: flex; */
     position: relative;
 }
 #page7 #shape{
     width: 50%;
     height: 80vh;
-    background:linear-gradient(to right,#561DAA,#DA069D);
-    border-radius:40% 39% 70% 20% / 58% 30% 40% 82% ;
+    background:linear-gradient(to right,white, gray);
+    border-radius:40% 59% 70% 50% / 48% 30% 90% 82% ;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -629,11 +738,12 @@ button:hover{
     height: 100%;
     border-radius: 50%;
     object-fit: cover;
+    filter: contrast(50%);
 }
 #page7 #small-shape{
     width: 20%;
     height: 50%;
-    background:linear-gradient(to right,#561DAA,#DA069D);
+    background:linear-gradient(to right,white,gray);
     border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% ;
     position: absolute;
     top: 0;
@@ -644,10 +754,12 @@ button:hover{
     width: 400px;
     height: 350px;
     background-color: white;
+    opacity: 0.8;
     text-align: center;
     position: absolute;
     bottom: 20%;
     right: 20%;
+    border-radius: 50px;
     /* transform: translate(-50%,-50%); */
     /* border-top-right-radius: 40%; */
 }
@@ -669,10 +781,10 @@ button:hover{
     font-size: 1.3vw;
     padding: 20px 40px;
     border-radius: 50px;
-    background: linear-gradient(to right,#561DAA,#DA069D);
+    background: linear-gradient(to right,white,gray);
     border: none;
     text-transform: uppercase;
-    color: white;
+    color:black;
     font-family: gilroy;
     font-weight: 600;
 
@@ -684,21 +796,25 @@ button:hover{
 #page8{
     width: 100%;
     height: 100vh;
-    background-color: black;
+    /* background-color: #353535; */
+    background-image: url(./images/background.jpg);
+    background-size: cover;
+    filter: brightness(70%);
     display: flex;
 }
 #page8 #left{
     width: 50%;
     height: 100vh;
-    background-color:tomato;
+    /* background-color: #353535; */
     position: relative;
 }
 #page8 #left #box{
     width: 60%;
     height: 100%;
-    background-color: #1A1A1A;
 }
 #page8 #left #box #photo{
+    border-radius: 50px;
+    overflow: hidden;
     width: 85%;
     height: 70%;
     background-color: white;
@@ -707,10 +823,14 @@ button:hover{
     left: 50%;
     transform: translate(-50%,-50%);   
 }
+#page8 #left #box #photo:hover img{
+    scale: 1.2;
+}
 #page8 #left #box #photo img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: all 1s ease;
 }
 
 #page8 #right{
@@ -775,8 +895,9 @@ button:hover{
 }
   
 #page8 #box #top .photo .photo-back {
-    background-color:tomato;
-    color: white;
+    background-color:white;
+    color: black;
+    font-family: gilroy;
     transform: rotateY(180deg);
     display: flex;
     flex-direction: column;
@@ -786,7 +907,7 @@ button:hover{
 #page8 #box #top .photo .photo-back #pic{
     width: 100px;
     height: 100px;
-    /* background-color: #f0f; */
+    /* background-color: gray; */
     border-radius: 50%;
     margin: 10px 0;
     background-image: url(./images/profile.jpg);
@@ -797,16 +918,19 @@ button:hover{
     font-size: 4.5vw;
     line-height: 1;
     text-transform: capitalize;
+    opacity: .8;
 }
 #page8 #box #top .photo .photo-back h3{
     font-size: 1.5vw;
     line-height: 1;
     font-family: gilroy;
+    opacity: .8;
 }
 #page8 #box #top .photo .photo-back p{
     font-size: 2vw;
-    font-family: yank;
+    font-family: gilroy;
     padding: 20px 0;
+    font-weight: bold;
     color: springgreen;
 }
 #page8 #box #top .photo #part2{
@@ -818,7 +942,7 @@ button:hover{
 }
 #page8 #box #top .photo #part2 a{
     text-decoration: none;
-    color: white;
+    color:black;
 }
 
 
@@ -834,10 +958,10 @@ button:hover{
     transition: all 1s ease;
     padding: 80px 100px;
     font-size: 2vw;
-    color: white;
+    color: rgb(41, 40, 40);
     font-family: gilroy;
     font-weight: bold;
-    background:linear-gradient(to right,#561DAA,#DA069D);
+    background:linear-gradient(to right,white,gray);
     border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% ;
     border: none;
     transition: all 0.5s ease;
@@ -845,13 +969,13 @@ button:hover{
 #page8 #box #middle button:hover{
     box-shadow: 
     inset 0 0 60px whitesmoke,
-    inset 20px 0 80px #f0f,
-    inset -20px 0 80px #0ff,
-    inset 20px 0 300px #f0f,
-    inset -20px 0 300px #0ff,
+    inset 20px 0 80px gray,
+    inset -20px 0 80px #f2f2f2,
+    inset 20px 0 300px gray,
+    inset -20px 0 300px #f2f2f2,
     0 0 50px #fff,
-    -10px 0 80px #f0f,
-    10px 0 80px #0ff;
+    -10px 0 80px gray,
+    10px 0 80px #f2f2f2;
 }
 
 #page8 #box #bottom{
@@ -861,11 +985,20 @@ button:hover{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    font-size: 1.3vw;
+    font-size: 1vw;
     font-family: gilroy;
     color: white;
     text-transform: capitalize;
     text-decoration-line: underline;
+    opacity: 0.7;
+}
+#page8 #box #bottom h4{
+    transition: all 1s ease;
+
+}
+#page8 #box #bottom h4:hover{
+    color: springgreen;
+    scale: 1.2;
 }
 
 /* ------------------------------------------------------------------------------------------------------------------ */
